--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "rollup": "^4.44.1",
     "typescript": "^5.8.3"
