--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.4",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.3",
+    "@semantic-release/npm": "^12.0.2",
     "@types/node": "^24.0.10",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
@@ -32,6 +36,7 @@
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "rollup": "^4.44.1",
+    "semantic-release": "^24.2.6",
     "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   }
