--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "pdfjs-dist": "^5.3.31"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.4",
     "@semantic-release/changelog": "^6.0.3",
@@ -29,6 +30,8 @@
     "@semantic-release/github": "^11.0.3",
     "@semantic-release/npm": "^12.0.2",
     "@types/node": "^24.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.35.1",
+    "@typescript-eslint/parser": "^8.35.1",
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
@@ -38,6 +41,13 @@
     "rollup": "^4.44.1",
     "semantic-release": "^24.2.6",
     "typescript": "^5.8.3",
+    "typescript-eslint": "^8.35.1",
     "vitest": "^3.2.4"
+  },
+  "lint-staged": {
+    "**/*.{ts,js,json,css,md}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
