--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
   "author": "Ajay Singh",
   "license": "MIT",
   "dependencies": {
-    "pdfjs-dist": "^5.3.31"
+    "pdfjs-dist": "^5.3.31",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@rollup/plugin-alias": "^5.1.1",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.4",
+    "@rollup/plugin-url": "^8.0.2",
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.3",
