--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "rollup": "^4.44.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-string": "^3.0.0",
     "semantic-release": "^24.2.6",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.1",
