--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["packages/core"]
+  "include": ["packages/core", "rollup.config.ts"]
 }
