--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
   "author": "Ajay Singh",
   "license": "MIT",
   "dependencies": {
-    "pdfjs-dist": "^5.3.31",
-    "tslib": "^2.8.1"
+    "pdfjs-dist": "^5.3.31"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@rollup/plugin-alias": "^5.1.1",
+    "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
     "@rollup/plugin-typescript": "^12.1.4",
     "@rollup/plugin-url": "^8.0.2",
@@ -43,10 +43,12 @@
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
-    "rollup": "^4.44.1",
+    "rollup": "^4.44.2",
+    "rollup-plugin-cleaner": "^1.0.0",
     "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-string": "^3.0.0",
     "semantic-release": "^24.2.6",
+    "tslib": "^2.8.1",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.35.1",
     "vitest": "^3.2.4"
