--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "prettier": "^3.6.2",
     "rollup": "^4.44.2",
     "rollup-plugin-cleaner": "^1.0.0",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-postcss": "^4.0.2",
     "semantic-release": "^24.2.6",
     "tslib": "^2.8.1",
