--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["rollup.config.ts", "packages/core"],
+  "include": ["rollup.config.ts", "packages/**/*.ts", "packages/**/*.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
