--- a/package.json
+++ b/package.json
@@ -1,66 +1,47 @@
 {
   "name": "pustaka",
   "version": "0.1.0",
-  "description": "A beautiful natural book-like PDF reader",
-  "main": "dist/pustaka.cjs.js",
-  "module": "dist/pustaka.esm.js",
-  "browser": "dist/pustaka.umd.js",
   "type": "module",
-  "types": "dist/index.d.ts",
+  "main": "./dist/pustaka.cjs.js",
+  "module": "./dist/pustaka.esm.js",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/pustaka.esm.js",
+      "require": "./dist/pustaka.cjs.js",
+      "types": "./dist/types/index.d.ts"
+    }
+  },
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "rollup --config rollup.config.ts --configPlugin typescript",
-    "test": "vitest",
-    "lint": "eslint . --ext .ts",
-    "format": "prettier --write .",
-    "prepare": "husky"
-  },
-  "repository": "https://github.com/ajaysinghnp/pustaka",
-  "author": "Ajay Singh",
-  "license": "MIT",
-  "dependencies": {
-    "pdfjs-dist": "^5.3.31"
+    "dev": "vite serve examples",
+    "build": "npm run build:lib && npm run build:types",
+    "build:lib": "rollup -c",
+    "build:types": "tsc --emitDeclarationOnly --outDir dist/types",
+    "build:examples": "vite build examples",
+    "test": "echo 'Tests will be added in next iteration'",
+    "clean": "rm -rf dist dist-examples",
+    "lint": "echo 'Linting will be added in next iteration'"
   },
   "devDependencies": {
-    "@eslint/js": "^9.30.1",
-    "@rollup/plugin-alias": "^5.1.1",
-    "@rollup/plugin-commonjs": "^28.0.6",
-    "@rollup/plugin-node-resolve": "^16.0.1",
-    "@rollup/plugin-typescript": "^12.1.4",
-    "@rollup/plugin-url": "^8.0.2",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/github": "^11.0.3",
-    "@semantic-release/npm": "^12.0.2",
-    "@types/node": "^24.0.10",
+    "@rollup/plugin-node-resolve": "^15.3.1",
+    "@rollup/plugin-typescript": "^11.1.6",
     "@types/pdfjs-dist": "^2.10.377",
-    "@typescript-eslint/eslint-plugin": "^8.35.1",
-    "@typescript-eslint/parser": "^8.35.1",
-    "eslint": "^9.30.1",
-    "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-prettier": "^5.5.1",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.1.2",
-    "prettier": "^3.6.2",
-    "rollup": "^4.44.2",
-    "rollup-plugin-cleaner": "^1.0.0",
-    "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "semantic-release": "^24.2.6",
-    "tslib": "^2.8.1",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.35.1",
-    "vitest": "^3.2.4"
+    "rollup": "^3.29.5",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.5"
   },
-  "lint-staged": {
-    "**/*.{ts,js,json,css,md}": [
-      "prettier --write",
-      "eslint --fix"
-    ]
+  "peerDependencies": {
+    "pdfjs-dist": "^5.4.149"
   },
-  "release": {
-    "tagFormat": "${version}"
+  "peerDependenciesMeta": {
+    "pdfjs-dist": {
+      "optional": true
+    }
+  },
+  "dependencies": {
+    "tslib": "^2.8.1"
   }
 }
